# chip8_emulator

./: .gitignore  CMakeLists.txt  README.md  main.c
include/: graphics.h  register.h  utils.h
src/: graphics.c  main.c  utils.c
